@@ -1,0 +1,17 @@
+.mainform
+  - form_for(@account) do |f|
+    .title Create Account
+    .section
+      .label Account name:
+      = f.text_field :name, :style =>"width:500px"
+      .label Notes:
+      = f.text_area :notes, :style =>"width:500px", :rows => 2
+      .label Tags:
+      = f.text_field :tags, :style =>"width:500px"
+    = render :partial => "permissions",  :locals => { :f => f }
+    = render :partial => "contact_info", :locals => { :f => f }
+    .buttonbar
+      = f.submit"Create Account" 
+      or 
+      = link_to_function "Cancel", "history.go(-1)"
+      
