@@ -1,3 +1,7 @@
+Sat, Nov 30, 2008
+---------------------------------------------------------------------
+- More work on [accounts] model, CSS styles, and [add account] form.
+
 Sat, Nov 29, 2008
 ---------------------------------------------------------------------
 - Added tabbed and tabless layouts, implemented tabs and current tab tracking.
